Setting up abstract DB class and logger class

--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xlvisben/Stock PWA",
+    "name": "xlvisben/stockpwa",
     "description": "A custom software for managing stock in a company",
     "authors": [
         {
