--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,7 @@ Options -Indexes
 
 # The below line are used to remove params and just show them as a url, has regex to escape characters
 RewriteRule ^logintoken/([a-zA-Z0-9\s_-]+)$ logintoken.php?token=$1 [L]
+RewriteRule ^resetpassword/([a-zA-Z0-9\s_-]+)$ resetpassword.php?token=$1 [L]
 
 # The below is used to remove the extensions in files i.e .html & .php
 RewriteCond %{REQUEST_FILENAME} !-d
